Commit reflectable file

--- a/generators/app/templates/flutter/flutter-app/lib/main_prod.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/main_prod.dart.ejs
@@ -1,7 +1,7 @@
 import 'package:<%= baseName %>/environment.dart';
 import 'package:flutter/material.dart';
 import 'app.dart';
-import 'main_prod.reflectable.dart';
+import 'main.reflectable.dart';
 import 'mapper.dart';
 
 void main() {
