Routes, mappers, keys OK Fixing bug for entity name

--- a/generators/app/templates/flutter/flutter-app/lib/mapper.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/mapper.dart.ejs
@@ -1,13 +1,16 @@
 import 'package:dart_json_mapper/dart_json_mapper.dart';
 import 'package:<%= baseName %>/shared/models/user.dart';
+// jhipster-merlin-needle-mapper-import-add
 
 void configMapper() {
 // YOU HAVE TO DECLARE YOUR DTOs LIST HERE FOR CORRECT SERIALIZATION / DESERIALIZATION
   JsonMapper().useAdapter(JsonMapperAdapter(valueDecorators: {
          typeOf<List<User>>(): (value) => value.cast<User>(),
-//  ,converters: {
+          // jhipster-merlin-needle-mapper-list-add
+ } ,converters: {
 // CODE HERE AS AN EXAMPLE YOU HAVE TO DECLARE YOUR ENUMS HERE FOR CORRECT SERIALIZATION / DESERIALIZATION
 //  PackState: EnumConverter(PackState.values)
+// jhipster-merlin-needle-mapper-enum-add
   }));
 }
 
