--- a/generators/app/templates/flutter/flutter-app/lib/routes.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/routes.dart.ejs
@@ -3,4 +3,5 @@ class <%= camelizedUpperFirstBaseName %>Routes {
   static final register = '/register';
   static final main = '/main';
   static final settings = '/settings';
+// jhipster-merlin-needle-route-url-add
 }
