--- a/generators/app/templates/flutter/flutter-app/lib/keys.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/keys.dart.ejs
@@ -5,4 +5,7 @@ class <%= camelizedUpperFirstBaseName %>Keys {
   static const registerScreen = Key('__registerScreen__');
   static const mainScreen = Key('__mainScreen__');
   static const settingsScreen = Key('__settingsScreen__');
+
+  //Entities
+  // jhipster-merlin-needle-key-add
 }
