--- a/generators/entity/templates/flutter/lib/bloc/entity.bloc.ejs
+++ b/generators/entity/templates/flutter/lib/bloc/entity.bloc.ejs
@@ -3,8 +3,10 @@ const baseName = context.baseName;
 const entityInstance = context.entityInstance;
 const entityFileName = context.entityFileName;
 const entityClassPlural = context.entityClassPlural;
-const entityClassHumanized = context.entityClassHumanized;
-const entityClassPluralHumanizedLowered = context.entityClassPluralHumanizedLowered;
+const entityClass = context.entityClass;
+const entityClassPluralLowered = context.entityClassPluralLowered;
+const entityClassCamelCase = context.entityClassCamelCase;
+
 _%>
 import 'dart:async';
 import 'package:bloc/bloc.dart';
@@ -16,27 +18,27 @@ import 'package:<%= baseName %>/entities/<%= entityFileName %>/<%= entityFileNam
 part '<%= entityFileName %>_events.dart';
 part '<%= entityFileName %>_state.dart';
 
-class <%= entityClassHumanized %>Bloc extends Bloc<<%= entityClassHumanized %>Event, <%= entityClassHumanized %>State> {
-  final <%= entityClassHumanized %>Repository _<%= entityFileName %>Repository;
+class <%= entityClass %>Bloc extends Bloc<<%= entityClass %>Event, <%= entityClass %>State> {
+  final <%= entityClass %>Repository _<%= entityClassCamelCase %>Repository;
 
-  <%= entityClassHumanized %>Bloc({@required <%= entityClassHumanized %>Repository <%= entityFileName %>Repository}) : assert(<%= entityFileName %>Repository != null),
-        _<%= entityFileName %>Repository = <%= entityFileName %>Repository, super(const <%= entityClassHumanized %>State());
+  <%= entityClass %>Bloc({@required <%= entityClass %>Repository <%= entityClassCamelCase %>Repository}) : assert(<%= entityClassCamelCase %>Repository != null),
+        _<%= entityClassCamelCase %>Repository = <%= entityClassCamelCase %>Repository, super(const <%= entityClass %>State());
 
   @override
-  void onTransition(Transition<<%= entityClassHumanized %>Event, <%= entityClassHumanized %>State> transition) {
+  void onTransition(Transition<<%= entityClass %>Event, <%= entityClass %>State> transition) {
     super.onTransition(transition);
   }
 
   @override
-  Stream<<%= entityClassHumanized %>State> mapEventToState(<%= entityClassHumanized %>Event event) async* {
-    if (event is InitList) {
+  Stream<<%= entityClass %>State> mapEventToState(<%= entityClass %>Event event) async* {
+    if (event is Init<%= entityClass %>List) {
       yield* onInitList(event);
     }
   }
 
-  Stream<<%= entityClassHumanized %>State> onInitList(InitList event) async* {
-    yield state.copyWith(<%= entityFileName %>StatusUI: <%= entityClassHumanized %>StatusUI.loading);
-    List<<%= entityClassHumanized %>> <%= entityClassPluralHumanizedLowered %> = await _<%= entityFileName %>Repository.getAll<%= entityClassPlural %>();
-    yield state.copyWith(<%= entityClassPluralHumanizedLowered %>: <%= entityClassPluralHumanizedLowered %>, <%= entityFileName %>StatusUI: <%= entityClassHumanized %>StatusUI.done);
+  Stream<<%= entityClass %>State> onInitList(Init<%= entityClass %>List event) async* {
+    yield state.copyWith(<%= entityClassCamelCase %>StatusUI: <%= entityClass %>StatusUI.loading);
+    List<<%= entityClass %>> <%= entityClassPluralLowered %> = await _<%= entityClassCamelCase %>Repository.getAll<%= entityClassPlural %>();
+    yield state.copyWith(<%= entityClassPluralLowered %>: <%= entityClassPluralLowered %>, <%= entityClassCamelCase %>StatusUI: <%= entityClass %>StatusUI.done);
   }
 }
