Integrate change of the main generator for the entity generator Drawer menu generation for the menu

--- a/generators/app/templates/flutter/flutter-app/lib/l10n/intl_en.arb.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/l10n/intl_en.arb.ejs
@@ -47,5 +47,10 @@
   "pageSettingsLastnameErrorValidation": "Lastname has to be {min} characters minimum",
   "pageSettingsEmailErrorValidation": "Email format incorrect",
   "genericErrorBadRequest": "Something wrong happened with the received data",
-  "genericErrorServer": "Something wrong when calling the server, please try again"
+  "genericErrorServer": "Something wrong when calling the server, please try again",
+  "loadingLabel": "Loading...",
+  "entityActionView": "View",
+  "entityActionEdit": "Edit",
+  "entityActionCreate": "Create",
+  "entityActionDelete": "Delete"
 }
