--- a/generators/app/templates/flutter/flutter-app/lib/l10n/intl_fr.arb.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/l10n/intl_fr.arb.ejs
@@ -42,5 +42,10 @@
   "pageSettingsLastnameErrorValidation": "Le nom doit avoir au moins {min} caractères",
   "pageSettingsEmailErrorValidation": "Format d'email incorrect",
   "genericErrorBadRequest": "Mauvais format de données",
-  "genericErrorServer": "Problème de communication avec le serveur, merci de réessayer"
+  "genericErrorServer": "Problème de communication avec le serveur, merci de réessayer",
+  "loadingLabel": "Chargement...",
+  "entityActionView": "Voir",
+  "entityActionEdit": "Editer",
+  "entityActionCreate": "Créer",
+  "entityActionDelete": "Supprimer"
 }
