Fixing folder problem when invoking the generator in jhipster folder Fixing I18n problem Buid list field correctly

--- a/generators/app/templates/flutter/flutter-app/lib/account/login/bloc/login_models.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/account/login/bloc/login_models.dart.ejs
@@ -1,10 +1,12 @@
 import 'package:formz/formz.dart';
+<%_ if (enableTranslation) { _%>
 import 'package:<%= baseName %>/generated/l10n.dart';
+<%_ } _%>
 
 enum LoginValidationError { invalid }
 
 extension LoginValidationErrorX on LoginValidationError {
-  String get invalidMessage => S.current.pageRegisterLoginValidationError(LoginInput.numberMin);
+String get invalidMessage => <%_ if (enableTranslation) { _%>S.current.pageRegisterLoginValidationError(LoginInput.numberMin)<%_ } else { _%>'The login has to contain more than ${LoginInput.numberMin}'<%_ } _%>;
 }
 
 class LoginInput extends FormzInput<String, LoginValidationError> {
@@ -22,7 +24,7 @@ class LoginInput extends FormzInput<String, LoginValidationError> {
 enum PasswordValidationError { invalid }
 
 extension PasswordValidationErrorX on PasswordValidationError {
-  String get invalidMessage => S.current.pageRegisterPasswordValidationError(PasswordInput.numberMin);
+String get invalidMessage => <%_ if (enableTranslation) { _%>S.current.pageRegisterPasswordValidationError(PasswordInput.numberMin)<%_ } else { _%>'Rules : 1 uppercase, 1 number and ${PasswordInput.numberMin} characters'<%_ } _%>;
 }
 
 class PasswordInput extends FormzInput<String, PasswordValidationError> {
