--- a/generators/app/templates/flutter/flutter-app/lib/shared/widgets/loading_indicator_widget.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/shared/widgets/loading_indicator_widget.dart.ejs
@@ -1,6 +1,6 @@
 import 'package:flutter/material.dart';
 <%_ if (enableTranslation) { _%>
-import 'package:jhipsterfluttersample/generated/l10n.dart';
+import 'package:<%= baseName %>/generated/l10n.dart';
 <%_ } _%>
 
 class LoadingIndicator extends StatelessWidget {
