--- a/generators/entity/templates/flutter/lib/bloc/entity.bloc.ejs
+++ b/generators/entity/templates/flutter/lib/bloc/entity.bloc.ejs
@@ -6,20 +6,33 @@ const entityClassPlural = context.entityClassPlural;
 const entityClass = context.entityClass;
 const entityClassPluralLowered = context.entityClassPluralLowered;
 const entityClassCamelCase = context.entityClassCamelCase;
-
+const fields = context.fields;
+const relationships = context.relationships;
+const primaryKeyType = context.primaryKeyType;
 _%>
 import 'dart:async';
 import 'package:bloc/bloc.dart';
 import 'package:flutter/foundation.dart';
 import 'package:equatable/equatable.dart';
+import 'package:flutter/widgets.dart';
+import 'package:formz/formz.dart';
+
 import 'package:<%= baseName %>/entities/<%= entityFileName %>/<%= entityFileName %>_model.dart';
 import 'package:<%= baseName %>/entities/<%= entityFileName %>/<%= entityFileName %>_repository.dart';
+import 'package:<%= baseName %>/entities/<%= entityFileName %>/bloc/<%= entityFileName %>_form_model.dart';
+import 'package:<%= baseName %>/generated/l10n.dart';
+import 'package:<%= baseName %>/shared/repository/http_utils.dart';
+import 'package:intl/intl.dart';
 
 part '<%= entityFileName %>_events.dart';
 part '<%= entityFileName %>_state.dart';
 
 class <%= entityClass %>Bloc extends Bloc<<%= entityClass %>Event, <%= entityClass %>State> {
   final <%= entityClass %>Repository _<%= entityClassCamelCase %>Repository;
+
+  <%_ fields.forEach(field => { _%>
+  final <%= field.fieldName %>Controller = TextEditingController();
+  <%_ }); _%>
 
   <%= entityClass %>Bloc({@required <%= entityClass %>Repository <%= entityClassCamelCase %>Repository}) : assert(<%= entityClassCamelCase %>Repository != null),
         _<%= entityClassCamelCase %>Repository = <%= entityClassCamelCase %>Repository, super(const <%= entityClass %>State());
@@ -33,7 +46,17 @@ class <%= entityClass %>Bloc extends Bloc<<%= entityClass %>Event, <%= entityCla
   Stream<<%= entityClass %>State> mapEventToState(<%= entityClass %>Event event) async* {
     if (event is Init<%= entityClass %>List) {
       yield* onInitList(event);
-    }
+    } else if (event is <%= entityClass %>FormSubmitted) {
+      yield* onSubmit();
+    } else if (event is Load<%= entityClass %>ByIdForEdit) {
+      yield* onLoad<%= entityClass %>IdForEdit(event);
+    } else if (event is Delete<%= entityClass %>ById) {
+      yield* onDelete<%= entityClass %>Id(event);
+    } else if (event is Load<%= entityClass %>ByIdForView) {
+      yield* onLoad<%= entityClass %>IdForView(event);
+    } <%_ fields.forEach(field => { _%> else if (event is <%= field.fieldNameCapitalized %>Changed){
+      yield* on<%= field.fieldNameCapitalized %>Change(event);
+    }<%_ }); _%>
   }
 
   Stream<<%= entityClass %>State> onInitList(Init<%= entityClass %>List event) async* {
@@ -41,4 +64,122 @@ class <%= entityClass %>Bloc extends Bloc<<%= entityClass %>Event, <%= entityCla
     List<<%= entityClass %>> <%= entityClassPluralLowered %> = await _<%= entityClassCamelCase %>Repository.getAll<%= entityClassPlural %>();
     yield state.copyWith(<%= entityClassPluralLowered %>: <%= entityClassPluralLowered %>, <%= entityClassCamelCase %>StatusUI: <%= entityClass %>StatusUI.done);
   }
+
+  Stream<<%= entityClass %>State> onSubmit() async* {
+    if (state.formStatus.isValidated) {
+      yield state.copyWith(formStatus: FormzStatus.submissionInProgress);
+      try {
+        <%= entityClass %> result;
+        if(state.editMode) {
+          <%= entityClass %> new<%= entityClass %> = <%= entityClass %>(state.loaded<%= entityClass %>.id,
+          <%_ fields.forEach(field => { _%> 
+            state.<%= field.fieldName %>.value,  
+            <%_ }); _%>
+          <%_ relationships.forEach(relationship => { _%> 
+            null, 
+          <%_ }); _%>
+          );
+
+          result = await _<%= entityInstance %>Repository.update(new<%= entityClass %>);
+        } else {
+          <%= entityClass %> new<%= entityClass %> = <%= entityClass %>(0,
+          <%_ fields.forEach(field => { _%> 
+            state.<%= field.fieldName %>.value,  
+            <%_ }); _%>
+          <%_ relationships.forEach(relationship => { _%> 
+            null, 
+          <%_ }); _%>
+          );
+
+          result = await _<%= entityInstance %>Repository.create(new<%= entityClass %>);
+        }
+
+        if (result == null) {
+          yield state.copyWith(formStatus: FormzStatus.submissionFailure,
+              generalNotificationKey: HttpUtils.badRequestServerKey);
+        } else {
+          yield state.copyWith(formStatus: FormzStatus.submissionSuccess,
+              generalNotificationKey: HttpUtils.successResult);
+        }
+      } catch (e) {
+        yield state.copyWith(formStatus: FormzStatus.submissionFailure,
+            generalNotificationKey: HttpUtils.errorServerKey);
+      }
+    }
+  }
+
+  Stream<<%= entityClass %>State> onLoad<%= entityClass %>IdForEdit(Load<%= entityClass %>ByIdForEdit event) async* {
+    yield state.copyWith(<%= entityInstance %>StatusUI: <%= entityClass %>StatusUI.loading);
+    <%= entityClass %> loaded<%= entityClass %> = await _<%= entityInstance %>Repository.get<%= entityClass %>(event.id);
+
+    <%_ fields.forEach(field => { _%> 
+    final <%= field.fieldName %> = <%= field.fieldNameCapitalized %>Input.dirty(loaded<%= entityClass %>?.<%= field.fieldName %> != null ? loaded<%= entityClass %>.<%= field.fieldName %>: <%- field.defaultValue %>);
+    <%_ }); _%>
+
+    yield state.copyWith(loaded<%= entityClass %>: loaded<%= entityClass %>, editMode: true,
+    <%_ fields.forEach(field => { _%> 
+      <%= field.fieldName %>: <%= field.fieldName %>,
+    <%_ }); _%>
+    <%= entityInstance %>StatusUI: <%= entityClass %>StatusUI.done);
+
+    <%_ fields.forEach(field => { _%>
+      <%_ if(field.fieldType === 'DateTime') { _%>
+    <%= field.fieldName %>Controller.text = DateFormat.yMMMMd(S.current.locale).format(loaded<%= entityClass %>?.<%= field.fieldName %>);
+        <%_  } else if(field.fieldType === 'int') { _%>
+    <%= field.fieldName %>Controller.text = loaded<%= entityClass %>.<%= field.fieldName %>.toString();
+        <%_ } else { _%>
+    <%= field.fieldName %>Controller.text = loaded<%= entityClass %>.<%= field.fieldName %>;
+        <%_ } _%>
+    <%_ }); _%>
+  }
+
+  Stream<<%= entityClass %>State> onDelete<%= entityClass %>Id(Delete<%= entityClass %>ById event) async* {
+    try {
+      await _<%= entityInstance %>Repository.delete(event.id);
+      this.add(Init<%= entityClass %>List());
+      yield state.copyWith(deleteStatus: <%= entityClass %>DeleteStatus.ok);
+    } catch (e) {
+      yield state.copyWith(deleteStatus: <%= entityClass %>DeleteStatus.ko,
+          generalNotificationKey: HttpUtils.errorServerKey);
+    }
+    yield state.copyWith(deleteStatus: <%= entityClass %>DeleteStatus.none);
+  }
+
+  Stream<<%= entityClass %>State> onLoad<%= entityClass %>IdForView(Load<%= entityClass %>ByIdForView event) async* {
+    yield state.copyWith(<%= entityInstance %>StatusUI: <%= entityClass %>StatusUI.loading);
+    try {
+      <%= entityClass %> loaded<%= entityClass %> = await _<%= entityInstance %>Repository.get<%= entityClass %>(event.id);
+      yield state.copyWith(loaded<%= entityClass %>: loaded<%= entityClass %>, <%= entityInstance %>StatusUI: <%= entityClass %>StatusUI.done);
+    } catch(e) {
+      yield state.copyWith(loaded<%= entityClass %>: null, <%= entityInstance %>StatusUI: <%= entityClass %>StatusUI.error);
+    }
+  }
+
+
+<%_ fields.forEach(field => { _%>
+  Stream<<%= entityClass %>State> on<%= field.fieldNameCapitalized %>Change(<%= field.fieldNameCapitalized %>Changed event) async* {
+    final <%= field.fieldName %> = <%= field.fieldNameCapitalized %>Input.dirty(event.<%= field.fieldName %>);
+    yield state.copyWith(
+      <%= field.fieldName %>: <%= field.fieldName %>,
+      formStatus: Formz.validate([
+      <%_ fields.forEach(fieldValidation => { _%>
+        <%_ if(field.fieldName === fieldValidation.fieldName) { _%>
+        <%= field.fieldName %>,
+        <%_ } else { _%>
+        state.<%= fieldValidation.fieldName %>,
+      <%_ } _%>
+      <%_ }); _%>
+      ]),
+    );
+  }
+<%_ }); _%>
+
+  @override
+  Future<void> close() {
+    <%_ fields.forEach(field => { _%>
+    <%= field.fieldName %>Controller.dispose();
+    <%_ }); _%>
+    return super.close();
+  }
+
 }
