--- a/generators/entity/templates/flutter/lib/bloc/entity.events.ejs
+++ b/generators/entity/templates/flutter/lib/bloc/entity.events.ejs
@@ -5,7 +5,9 @@ const entityFileName = context.entityFileName;
 const entityClassPlural = context.entityClassPlural;
 const entityClassPluralLowered = context.entityClassPluralLowered;
 const entityClass = context.entityClass;
-
+const fields = context.fields;
+const relationships = context.relationships;
+const primaryKeyType = context.primaryKeyType;
 _%>
 part of '<%= entityFileName %>_bloc.dart';
 
@@ -20,3 +22,43 @@ abstract class <%= entityClass %>Event extends Equatable {
 }
 
 class Init<%= entityClass %>List extends <%= entityClass %>Event {}
+
+<%_ fields.forEach(field => { _%>
+class <%= field.fieldNameCapitalized %>Changed extends <%= entityClass %>Event {
+  final <%= field.fieldType %> <%= field.fieldName %>;
+  
+  const <%= field.fieldNameCapitalized %>Changed({@required this.<%= field.fieldName %>});
+  
+  @override
+  List<Object> get props => [<%= field.fieldName %>];
+}
+<%_ }); _%>
+
+class <%= entityClass %>FormSubmitted extends <%= entityClass %>Event {}
+
+class Load<%= entityClass %>ByIdForEdit extends <%= entityClass %>Event {
+  final int id;
+
+  const Load<%= entityClass %>ByIdForEdit({@required this.id});
+
+  @override
+  List<Object> get props => [id];
+}
+
+class Delete<%= entityClass %>ById extends <%= entityClass %>Event {
+  final int id;
+
+  const Delete<%= entityClass %>ById({@required this.id});
+
+  @override
+  List<Object> get props => [id];
+}
+
+class Load<%= entityClass %>ByIdForView extends <%= entityClass %>Event {
+  final int id;
+
+  const Load<%= entityClass %>ByIdForView({@required this.id});
+
+  @override
+  List<Object> get props => [id];
+}
